--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "6.4.0"
   },
   "dependencies": {
+    "body-parser": "^1.17.1",
     "cheerio": "^0.22.0",
     "eslint": "^3.4.0",
     "node-cache": "^3.2.1",
